--- a/templates/index.html
+++ b/templates/index.html
@@ -5,68 +5,99 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amino Acid Calculator</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 
 <body>
     <!--User Input Form-->
-    <h1>Amino Acid Calculator Requirements</h1>
-    <form action="/calculate" method="post">
+    <h1 id="title">Amino Acid Calculator</h1>
+    <form action="/calculate" method="post" class="mt-3 custom-form-class">
+
         <!--Age-->
-        <label for="age">Age:</label>
-        <input type="number" name="age" min='0' max='100' placeholder="Age" required>
-        <!--Gender-->
-        <label for="gender">Gender:</label>
-        <select id="gender" name="gender" required>
-            <option value="">Please select</option>
-            <option value="male">Male</option>
-            <option value="female">Female</option>
-            <option value="other">Other</option>
-        </select>
+        <div class="mb-3">
+            <label for="age" class="form-label">Age:</label>
+            <input type="number" class="form-control" id="age" name="age" min='0' max='100' placeholder="Age" required>
+        </div>
 
-        <!--Make dropdown for kg/lb, cm/in-->
         <!--Weight-->
-        <label for="weight">Weight:</label>
-        <input type="number" id="weight" name="weight" min='1' max="500" placeholder="Weight" required>
-        <input type="radio" id="lb" name="weight_unit" value="lb" checked>
-        <label for="lb">lb</label>
-        <input type="radio" id="kg" name="weight_unit" value="kg">
-        <label for="kg">kg</label>
-        <!--Height: Feet and Inches dropdowns-->
-        <label for="height_feet">Height:</label>
-        <select id="height_feet" name="height_feet" required>
-            <option value="">Feet</option>
-            {% for foot in range(0, 8) %}
-            <option value="{{ foot }}">{{ foot }}</option>
-            {% endfor %}
-        </select>
-        <label>ft</label>
-        <select id="height_inches" name="height_inches" required>
-            <option value="">Inches</option>
-            {% for inch in range(0, 12) %}
-            <option value="{{ inch }}">{{ inch }} in</option>
-            {% endfor %}
-        </select>
-        <label>in</label>
-        <!--Activity-->
-        <label for="activity">Activity Level:</label>
-        <select id="activity" name="activity" required>
-            <option value="">Please select</option>
-            <option value="sedentary">Sedentary</option>
-            <option value="light">Light activity</option>
-            <option value="moderate">Moderate activity</option>
-            <option value="active">Active</option>
-            <option value="very_active">Very active</option>
-        </select>
-        <!--Pregnancy-->
-        <label for="pregnancy">Pregnancy/Breastfeeding Status:</label>
-        <select id="pregnancy" name="pregnancy" required>
-            <option value="none">None</option>
-            <option value="pregnant">Pregnant</option>
-            <option value="breastfeeding">Breastfeeding</option>
-        </select>
+        <div class="mb-3">
+            <label for="weight" class="form-label">Weight:</label>
+            <input type="number" class="form-control" id="weight" name="weight" min='1' max="500" placeholder="Weight"
+                required>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" id="lb" name="weight_unit" value="lb" checked>
+                <label class="form-check-label" for="lb">lb</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" id="kg" name="weight_unit" value="kg">
+                <label class="form-check-label" for="kg">kg</label>
+            </div>
+        </div>
 
-        <button type="submit">Calculate</button>
+        <!--Height: Feet and Inches select lists-->
+        <div class="mb-3">
+            <div class="form-row">
+                <div class="col-auto">
+                    <label for="height_feet" class="form-label">Height:</label>
+                    <select id="height_feet" name="height_feet" class="form-select" required>
+                        <option value="">Feet</option>
+                        {% for foot in range(0, 8) %}
+                        <option value="{{ foot }}">{{ foot }} ft</option>
+                        {% endfor %}
+                    </select>
+
+                </div>
+                <div class="col-auto">
+                    <label for="height_inches" class="visually-hidden"></label>
+                    <select id="height_inches" name="height_inches" class="form-select" required>
+                        <option value="">Inches</option>
+                        {% for inch in range(0, 12) %}
+                        <option value="{{ inch }}">{{ inch }} in</option>
+                        {% endfor %}
+                    </select>
+
+                </div>
+            </div>
+        </div>
+
+        <!--Gender select list-->
+        <div class="mb-3">
+            <label for="gender" class="form-label">Gender:</label>
+            <select id="gender" name="gender" class="form-select" required>
+                <option value="">Please select</option>
+                <option value="male">Male</option>
+                <option value="female">Female</option>
+                <option value="other">Other</option>
+            </select>
+        </div>
+
+        <!--Activity-->
+        <div class="mb-3">
+            <label for="activity" class="form-label">Activity Level:</label>
+            <select id="activity" name="activity" class="form-select" required>
+                <option value="">Please select</option>
+                <option value="sedentary">Sedentary</option>
+                <option value="light">Light activity</option>
+                <option value="moderate">Moderate activity</option>
+                <option value="active">Active</option>
+                <option value="very_active">Very active</option>
+            </select>
+        </div>
+
+        <!--Pregnancy-->
+        <div class="mb-3">
+            <label for="pregnancy" class="form-label">Pregnancy/Breastfeeding Status:</label>
+            <select id="pregnancy" name="pregnancy" class="form-select" required>
+                <option value="none">None</option>
+                <option value="pregnant">Pregnant</option>
+                <option value="breastfeeding">Breastfeeding</option>
+            </select>
+        </div>
+        <!--Button-->
+        <div class="d-flex justify-content-center">
+            <button type="submit" class="btn btn-primary">Calculate</button>
+        </div>
     </form>
 </body>
 
