--- a/templates/results.html
+++ b/templates/results.html
@@ -10,7 +10,10 @@
 <body>
     <div class="container">
         <h1>Calculation Results</h1>
-        <p>The result is: {{ result }}</p>
+        <p>Estimated Daily Calorie Needs: {{ total_daily_calories }} kcal</p>
+        <p>Estimated Daily Protein Needs: {{ protein_needs }} g</p>
+        <p>{{ amino_acid_results|safe }}</p>
+        
         <a href="{{ url_for('index') }}">Back to form</a>
     </div>
 </body>
