Gave classes and default values for AAFormula and made them to adapt with app.py and index

--- a/templates/index.html
+++ b/templates/index.html
@@ -77,10 +77,10 @@
             <select id="activity" name="activity" class="form-select" required>
                 <option value="">Please select</option>
                 <option value="sedentary">Sedentary</option>
-                <option value="light">Light activity</option>
-                <option value="moderate">Moderate activity</option>
+               <!-- <option value="light">Light activity</option> -->
+                <option value="moderate">Moderate </option>
                 <option value="active">Active</option>
-                <option value="very_active">Very active</option>
+              <!--  <option value="very_active">Very active</option> -->
             </select>
         </div>
 
