--- a/templates/results.html
+++ b/templates/results.html
@@ -13,14 +13,14 @@
         <div class="card mb-3">
             <div class="card-body">
                 <h5 class="card-title">Daily Calorie Needs</h5>
-                <p class="card-text">Estimated Daily Calorie Needs: {{ total_daily_calories }} kcal</p>
+                <p class="card-text">{{ total_daily_calories }} cal</p>
             </div>
         </div>
 
         <div class="card mb-3">
             <div class="card-body">
                 <h5 class="card-title">Daily Protein Needs</h5>
-                <p class="card-text">Estimated Daily Protein Needs: {{ protein_needs }} g</p>
+                <p class="card-text">{{ protein_needs }} g</p>
             </div>
         </div>
 
@@ -30,7 +30,25 @@
                 <p class="card-text">{{ amino_acid_results|safe }}</p>
             </div>
         </div>
+
+        <div class="card mb-3">
+            <div class="card-body">
+                <h5 class="card-title">Macronutrient needs</h5>
+                <p class="card-text">{{ macros_needs }}</p>
+            </div>
+        </div>
         
+        <div class="container">
+            <h1 class="mb-4">Recipes</h1>
+            {% for hit in recipes %}
+                <div>
+                    <h2>{{ hit.recipe.label }}</h2>
+                    <img src="{{ hit.recipe.image }}" alt="{{ hit.recipe.label }}">
+                    <p><a href="{{ hit.recipe.url }}">Recipe Link</a></p>
+                </div>
+            {% endfor %}
+        </div>
+
         <a href="{{ url_for('index') }}" class="btn btn-primary">Back to form</a>
     </div>
 </body>
