--- a/templates/index.html
+++ b/templates/index.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amino Acid Calculator</title>
+    <title>Nutrition Calculator</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <!--User Input Form-->
-    <h1 id="title">Amino Acid Calculator</h1>
+    <h1 class="title">Nutrition Calculator</h1>
     <form action="/calculate" method="post" class="mt-3 custom-form-class">
 
         <!--Age-->
