Modified test cases and buttons

--- a/templates/index.html
+++ b/templates/index.html
@@ -107,7 +107,7 @@
 
         <!--Button-->
         <div class="d-flex justify-content-center">
-            <button type="submit" class="btn btn-primary">Calculate</button>
+            <button type="submit" class="btn btn-outline-light">Calculate</button>
         </div>
     </form>
 </body>
