--- a/templates/results.html
+++ b/templates/results.html
@@ -34,7 +34,7 @@
         </div>
 
         <div class="d-flex justify-content-center">
-        <a href="{{ url_for('index') }}" class="btn btn-primary back-button">Back to form</a>
+        <a href="{{ url_for('index') }}" class="btn btn-outline-light back-button">Back to form</a>
         </div>
     </div>
 </body>
