Added recalculate feature in results page.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,7 @@ body {
     margin: 5% 10%;
     background-color: #121212;
     color: #fff;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Montserrat','Open Sans', sans-serif;
 }
 
 .title {
@@ -22,10 +22,60 @@ body {
 
 /* Results page only */
 .container {
-    max-width: 800px;
+    max-width: 900px;
 }
 
 .card {
     border: 2px solid #fff; 
     background-color: #1e1e1e;
+}
+
+.recalculate {
+    border: 2px dashed #fff;
+    border-radius: 0.5rem;
+    padding: 1rem 1.5rem;
+    background-color: #000;
+
+}
+
+#stats-header {
+    text-align: center;
+    border-bottom: 2px solid #fff;
+}
+
+.flex-row {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.flex-grow-1 {
+    flex-grow: 1;
+    flex-basis: min-content;
+    min-width: 75px;
+    font-size: 0.9rem;
+    padding: 8px;
+}
+
+.height-input {
+    flex-wrap: nowrap;
+}
+
+.age-input {
+    width: 60px;
+    height: 22px;
+}
+
+.weight {
+    flex-wrap: nowrap;
+    height: 22px;
+}
+
+#weight-input {
+    height: 22px;
+    width: 60px;
+}
+
+.recalc-btn {
+    padding-top: 1rem;
+    margin: auto;
 }
