--- a/templates/results.html
+++ b/templates/results.html
@@ -10,8 +10,80 @@
 </head>
 <body>
     <div class="container my-5">
+
+        <!--Recalculate bar-->
+        <form action="{{ url_for('calculate') }}" method="post" class="container mb-4 recalculate">
+            <h3 id="stats-header">Your stats</h3>
+            <div class="row flex-row">
+                <div class="col-auto flex-grow-1">
+                    <label for="age">Age</label>
+                    <input type="number" id="age" name="age" class="form-control form-control-sm age-input" value="{{ user_data['age'] }}" required>
+                </div>
+                
+                <div class="col-auto flex-grow-1">
+                    <label for="weight">Weight</label>
+                    <div class="input-group input-group-sm weight">
+                        <input type="number" id="weight-input" name="weight" class="form-control form-control-sm" value="{{ user_data['weight'] }}" required>
+                        <select name="weight_unit" class="form-select form-select-sm">
+                            <option value="lb" {% if user_data['weight_unit'] == 'lb' %}selected{% endif %}>lb</option>
+                            <option value="kg" {% if user_data['weight_unit'] == 'kg' %}selected{% endif %}>kg</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-auto flex-grow-1">
+                    <label for="height_feet">Height</label>
+                    <div class="input-group input-group-sm height-input">
+                        <select id="height_feet" name="height_feet" class="form-select form-select-sm" required>
+                            {% for foot in range(0, 8) %}
+                            <option value="{{ foot }}" {% if user_data['height_feet'] == foot %}selected{% endif %}>{{ foot }}ft</option>
+                            {% endfor %}
+                        </select>
+                        <select id="height_inches" name="height_inches" class="form-select form-select-sm" required>
+                            {% for inch in range(0, 12) %}
+                            <option value="{{ inch }}" {% if user_data['height_inches'] == inch %}selected{% endif %}>{{ inch }}in</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                </div>
+                <div class="col-auto flex-grow-1">
+                    <label for="gender">Gender</label>
+                    <select id="gender" name="gender" class="form-select form-select-sm" required>
+                        <option value="male" {% if user_data['gender'] == 'male' %}selected{% endif %}>Male</option>
+                        <option value="female" {% if user_data['gender'] == 'female' %}selected{% endif %}>Female</option>
+                    </select>
+                </div>
+                <div class="col-auto flex-grow-1">
+                    <label for="activity">Activity</label>
+                    <select id="activity" name="activity" class="form-select form-select-sm" required>
+                        <option value="sedentary" {% if user_data['activity_level'] == 'sedentary' %}selected{% endif %}>Sedentary</option>
+                        <option value="moderate" {% if user_data['activity_level'] == 'moderate' %}selected{% endif %}>Moderate</option>
+                        <option value="active" {% if user_data['activity_level'] == 'active' %}selected{% endif %}>Active</option>
+                    </select>
+                </div>
+                <div class="col-auto flex-grow-1">
+                    <label for="pregnancy">Pregnancy</label>
+                    <select id="pregnancy" name="pregnancy" class="form-select form-select-sm" required>
+                        <option value="none" {% if user_data['pregnancy_status'] == 'none' %}selected{% endif %}>None</option>
+                        <option value="pregnant" {% if user_data['pregnancy_status'] == 'pregnant' %}selected{% endif %}>Pregnant</option>
+                        <option value="breastfeeding" {% if user_data['pregnancy_status'] == 'breastfeeding' %}selected{% endif %}>Breastfeeding</option>
+                    </select>
+                </div>
+                <div class="col-auto flex-grow-1">
+                    <label for="goal">Goal</label>
+                    <select id="goal" name="goal" class="form-select form-select-sm" required>
+                        <option value="lose" {% if user_data['goal'] == 'lose' %}selected{% endif %}>Lose weight</option>
+                        <option value="maintain" {% if user_data['goal'] == 'maintain' %}selected{% endif %}>Maintain weight</option>
+                        <option value="gain" {% if user_data['goal'] == 'gain' %}selected{% endif %}>Gain weight</option>
+                    </select>
+                </div>
+                <div class="col-auto recalc-btn">
+                    <button type="submit" class="btn btn-outline-light">Recalculate</button>
+                </div>
+            </div>
+        </form>
+
+        <!--Results-->
         <h1 class="title mb-4">Results</h1>
-        
         <div class="card mb-3">
             <div class="card-body">
                 <h5 class="card-title">Daily Calorie Needs</h5>
@@ -21,7 +93,7 @@
 
         <div class="card mb-3">
             <div class="card-body">
-                <h5 class="card-title">Macronutrient needs</h5>
+                <h5 class="card-title">Macronutrient Needs</h5>
                 <p class="card-text">{{ macros_needs|safe }}</p>
             </div>
         </div>
@@ -36,6 +108,7 @@
         <div class="d-flex justify-content-center">
         <a href="{{ url_for('index') }}" class="btn btn-outline-light back-button">Back to form</a>
         </div>
+
     </div>
 </body>
 </html>
