--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <title>Nutrition Calculator</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
         <!--Weight-->
         <div class="mb-3">
             <label for="weight" class="form-label">Weight:</label>
-            <input type="number" class="form-control" id="weight" name="weight" min='1' max="500" placeholder="Weight"
+            <input type="number" class="form-control" name="weight" min='1' max="500" placeholder="Weight"
                 required>
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" id="lb" name="weight_unit" value="lb" checked>
