--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,13 +1,14 @@
 
 body {
-    margin: 5% 10%;
-    background-color: #121212;
+    margin: auto 10%;
+    background-color: #000;
     color: #fff;
     font-family: 'Montserrat','Open Sans', sans-serif;
 }
 
 .title {
     text-align: center;
+    margin-top: 6rem;
 }
 
 .custom-form-class {
@@ -16,7 +17,7 @@ body {
     border-radius: 0.5rem;
     max-width: 550px;
     margin: auto;
-    background-color: #1e1e1e;
+    background-color: #1d1d1d;
 }
 
 
@@ -26,16 +27,15 @@ body {
 }
 
 .recalculate {
-    padding-bottom: 1rem;
-    background-color: #121212;
-}
-
-#stats-header {
-    text-align: center;
+    background-color: #000;
+    border: 2px solid #fff;
+    border-radius: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-top: 0.5rem;
 }
 
 .recalc-btn {
-    
+    margin: 0.5rem auto;
 }
 
 .card {
@@ -48,6 +48,7 @@ body {
     padding-left: 0;
     padding-bottom: 0.5rem;
     margin-left: 15px;
+    margin-right: 15px;
 }
 
 .description-text-box {
@@ -58,25 +59,16 @@ body {
     font-size: 0.7rem;
 }
 
-.flex-row {
-    display: flex;
-    flex-wrap: wrap;
-}
-
 .flex-grow-1 {
     flex-grow: 1;
     flex-basis: min-content;
     min-width: 75px;
     font-size: 0.9rem;
-    padding: 8px;
+    padding: 10px;
 }
 
 .height-input {
     flex-wrap: nowrap;
-}
-
-.age-left {
-    padding-left: 0;
 }
 
 .age-input {
