--- a/templates/results.html
+++ b/templates/results.html
@@ -92,7 +92,9 @@
                         <p class="card-text">{{ bmi }}</p>
                     </div>
                     <div class="col-6 description-text-box">
-                        <p class="description-text">Your BMI falls into the <b>{{ weight_category }}</b> category.<br><br>Body Mass Index (BMI) is a numerical value of your weight in relation to your height. It's an indicator of whether a person has a healthy body weight for a person of their height.</p>
+                        <p class="description-text">Your BMI falls into the <b>{{ weight_category }}</b> category.<br><br>Body Mass Index (BMI) is a numerical value of your weight in relation to your height. It's an indicator of whether a person has a healthy body weight for a person of their height.
+                        <br><br>  The BMI index goes as shows:  <br>  Under Weight: &lt;18.5 <br> Normal: 18.5 - 24.9 <br> Overweight: 25.0 - 29.9 <br> Extremely Obese: &gt;= 35.0  
+                        </p>
                         
                     </div>
                 </div>
@@ -109,7 +111,7 @@
                         <p class="card-text">{{ total_daily_calories }} cal</p>
                     </div>
                     <div class="col-6 description-text-box">
-                        <p class="description-text">The number of calories you need to {{ user_data['goal'] }} your current weight.</p>
+                        <p class="description-text">The number of calories you need to eat to {{ user_data['goal'] }} your current weight.</p>
                     </div>
                 </div>
             </div>
@@ -126,7 +128,7 @@
                     </div>
                     <div class="col-6 description-text-box">
                         <p class="description-text">Macronutrients are the nutrients your body needs in large amounts: carbohydrates, proteins, and fats.
-                        <br>The typical macronutrient distribution range recommended for a balanced diet is 45-65% carbohydrates, 10-35% protein, and 20-35% fats.</p>
+                        <br><br>The typical macronutrient distribution range recommended for a balanced diet is 45-65% carbohydrates, 10-35% protein, and 20-35% fats.</p>
                     </div>
                 </div>
             </div>
