--- a/templates/results.html
+++ b/templates/results.html
@@ -93,7 +93,7 @@
                     </div>
                     <div class="col-6 description-text-box">
                         <p class="description-text">Your BMI falls into the <b>{{ weight_category }}</b> category.<br><br>Body Mass Index (BMI) is a numerical value of your weight in relation to your height. It's an indicator of whether a person has a healthy body weight for a person of their height.
-                        <br><br>  The BMI index goes as shows:  <br>  Under Weight: &lt;18.5 <br> Normal: 18.5 - 24.9 <br> Overweight: 25.0 - 29.9 <br> Extremely Obese: &gt;= 35.0  
+                        <br><br>BMI index Scale:  <br>  Under Weight: &lt;18.5 <br> Normal: 18.5 - 24.9 <br> Overweight: 25.0 - 29.9 <br> Extremely Obese: &gt;= 35.0
                         </p>
                         
                     </div>
