more final touches

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <!--User Input Form-->
-    <h1 class="title">HeAAlthy Nutrition Calculator</h1>
+    <h1 class="title">HeAAlthy Calculator</h1>
     <form action="/calculate" method="post" class="mt-3 custom-form-class">
 
         <!--Age-->
