--- a/templates/results.html
+++ b/templates/results.html
@@ -13,7 +13,7 @@
     <div class="container mb-5">
 
         <!--Recalculate bar-->
-        <form action="{{ url_for('calculate') }}" method="post" class="container my-5 recalculate">
+        <form action="{{ url_for('calculate') }}" method="post" class="container mt-5 mb-4 recalculate">
             <div class="row">
                 <div class="col-auto flex-grow-1">
                     <label for="age">Age</label>
